update .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLIENT_ID= '0e9a49ead1ab44be8fd9c627f1ebc321'
-CLIENT_SECRET= "354a38ac826f4d4fa915926e1037a0fd"
+CLIENT_ID= ''
+CLIENT_SECRET= ""
 REDIRECT_URL = "http://localhost:5000/auth/callback"
 SCOPE = "user-read-playback-state user-modify-playback-state user-read-currently-playing streaming user-follow-read user-top-read user-read-recently-played user-read-email user-read-private" 
